fixed bug with dialog not opening again without page refresh

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,13 @@
         "node_modules/lit/*"
       ]
     },
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "lib": [
+      "ES2019",
+      "DOM"
+    ]
   },
   "include": [
     "./src"
   ],
-  "lib": [
-    "es2017"
-  ]
 }
