--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "@tsconfig/recommended": "^1.0.8",
     "eslint": "^9.17.0",
     "prettier": "^3.4.2",
-    "rollup": "^4.29.1"
+    "rollup": "^4.29.1",
+    "tslib": "^2.8.1"
+  },
+  "dependencies": {
+    "custom-card-helpers": "^1.9.0",
+    "lit": "^3.2.1"
   }
 }
