updated mainfest file to include domain so logo would be shown properly

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-cards",
+  "name": "SmartVan.io - Inclinometer Card",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
